# Advanced-Notebook

./: CMakeLists.txt  LICENSE  count_code.bat  main.cpp  notebook_resources.qrc
Advanced_Calculator/: CMakeLists.txt  resources.qrc
Advanced_Calculator/src/: CalqlatrWidget.cpp  CalqlatrWidget.h
Advanced_Calculator/src/calqlatr_history/: CalqlatrHistory.cpp  CalqlatrHistory.h  CalqlatrHistoryWidget.cpp  CalqlatrHistoryWidget.h
Advanced_Calculator/src/scientific_calqlatr/: CalculationObject.cpp  CalculationObject.h  SciCalqlatr.cpp  SciCalqlatr.h  SciCalqlatrButton.cpp  SciCalqlatrButton.h  SciCalqlatrWidget.cpp  SciCalqlatrWidget.h
Advanced_Calculator/src/util/: ButtonState.cpp  ButtonState.h  CalqlatrElement.h  CalqlatrRecord.cpp  CalqlatrRecord.h  CalqlatrStaticProperties.h  MultiStatePushButton.cpp  MultiStatePushButton.h  MultiStateToolButton.cpp  MultiStateToolButton.h  ReadOnlyLineEdit.cpp  ReadOnlyLineEdit.h  RecordTransferSrcInterface.h
Advanced_Calculator/ui/: CalqlatrHistoryWidget.ui  CalqlatrWidget.ui  SciCalqlatrWidget.ui
config_system/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  ConfigObject.h
src/: MainWindow.cpp  MainWindow.h
src/backtrace_widget/: BackTraceWidget.cpp  BackTraceWidget.h
src/notebook_widget/: AdvTextEdit.cpp  AdvTextEdit.h  NoteBookWidget.cpp  NoteBookWidget.h  RecordObject.cpp  RecordObject.h
src/util/: AbstractFileEditor.cpp  AbstractFileEditor.h  ColorEditBox.cpp  ColorEditBox.h  ColorPicker.cpp  ColorPicker.h  IconHelper.cpp  IconHelper.h  NoSinkingToolButton.cpp  NoSinkingToolButton.h  NoteBookStaticProperties.h  ProgramSettings.h  SettingsWidget.cpp  SettingsWidget.h
ui/: MainWindow.ui  NoteBookWidget.ui  SettingsWidget.ui
